# Local_and_Global_Planning

./: .gitignore  .gitmodules  Makefile  README.md  Untitled.ipynb  a_star.py  algorithm.py  bezier_lines.ipynb  config.py  main.cpp  main.py  main2.py  profile.py  render.py  rtt.py  scipy_interpolation.ipynb  spring.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  bezier_lines-checkpoint.ipynb  scipy_interpolation-checkpoint.ipynb
global_sim/: algorithm.py  config.py  main.py
local_sim/: BetterOptimizer.ipynb  BicycleKinematics.ipynb  README.md  bicycle_model_test2.py  obstacle.py  optimizer.ipynb  path.py  test2.py  test_path_optimization.py
local_sim/.ipynb_checkpoints/: BetterOptimizer-checkpoint.ipynb  optimizer-checkpoint.ipynb
local_sim/kinematics/: bicycle.py  cartesian.py  kinematics.py
local_sim/testing/: bicycle_model_test.py  convex_hull.ipynb  misc.py  wheel_model.py
local_sim/testing/.ipynb_checkpoints/: convex_hull-checkpoint.ipynb
ros/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
ros/catkin_ws/src/: teb_testing.md
ros/catkin_ws/src/rrt_planner/: CMakeLists.txt  bgp_plugin.xml  package.xml
ros/catkin_ws/src/rrt_planner/include/rrt_planner/: rrt_planner.h
ros/catkin_ws/src/rrt_planner/src/: rrt_planner.cpp
src/geo/: circle.h  midpoint.cpp  midpoint.h  path.h  vector.h
src/gui/: view.h  window.cpp  window.h
src/sim/: chain.h  world_view.cpp  world_view.h
src/util/: keyboard.cpp  keyboard.h  logger.cpp  logger.h
type_hints/: types.py
utils/: line_cross.py  occupancy_grid.py  render.py  spline.py
(+276 files in other folders)
